corrected names - Template 1

--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gallery - B&B Corte Barbieri</title>
+  <title>Gallery - B&B Corte Pozzol</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -33,7 +33,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 B&B Corte Barbieri | All rights reserved</p>
+    <p>&copy; 2025 B&B Corte Pozzol | All rights reserved</p>
   </footer>
 </body>
 </html>
