--- a/location.html
+++ b/location.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Location - B&B Corte Barbieri</title>
+  <title>Location - B&B Corte Pozzol</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,14 +24,14 @@
   <section class="location-details">
     <h1>Our Location</h1>
     <p>We are located in the beautiful countryside of Northern Italy, offering a peaceful and relaxing environment for all guests.</p>
-    <p>Address: Via Cortebarbieri, Northern Italy</p>
+    <p>Address: Via ......, ......</p>
     <p><strong>Get Directions:</strong></p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d108924.67044803692!2d11.3802592!3d45.4136584!3m2!1i1024!2i768!4f13.1!4m4!2s0x477f4e90fd82c94f%3A0xf27123c6c728b02c!3m1!1b1!4m1!1e1" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
   </section>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 B&B Corte Barbieri | All rights reserved</p>
+    <p>&copy; 2025 B&B Corte Pozzol | All rights reserved</p>
   </footer>
 </body>
 </html>
