--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,8 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="rooms.html">Rooms</a></li>
-        <li><a href="location.html">Location</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
