--- a/about.html
+++ b/about.html
@@ -20,14 +20,39 @@
     </nav>
   </header>
 
-  <!-- Location Details -->
-  <section class="location-details">
-    <h1>Our Location</h1>
-    <p>We are located in the beautiful countryside of Northern Italy, offering a peaceful and relaxing environment for all guests.</p>
-    <p>Address: Via ......, ......</p>
-    <p><strong>Get Directions:</strong></p>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d108924.67044803692!2d11.3802592!3d45.4136584!3m2!1i1024!2i768!4f13.1!4m4!2s0x477f4e90fd82c94f%3A0xf27123c6c728b02c!3m1!1b1!4m1!1e1" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-  </section>
+<!-- Placeholder Section -->
+<section class="placeholder">
+    <div class="content-wrapper">
+        <div class="image-container">
+            <img src="images/IMG_3025.jpg" alt="Img" class="responsive-img">
+        </div>
+        <div class="text-container">
+            <h2>About</h2>
+            <p>_________________________________</p>
+            <q> gap </q>
+            <p>Corte Pozzol is bla bla bla bla</p>
+            <p>_________________________________</p>
+
+        </div>
+    </div>
+</section>
+
+<!-- Image and Text Section -->
+<section class="image-text-section">
+    <div class="image-container2">
+        <img src="images/image1.jpg" alt="Image 1" class="responsive-img2">
+        <img src="images/image2.jpg" alt="Image 2" class="responsive-img2">
+        <img src="images/image3.jpg" alt="Image 3" class="responsive-img2">
+    </div>
+    <div class="text-container2">
+        <h2>Text Goes Here</h2>
+        <p>Some more details or description about the images or the section.</p>
+
+        <h2>Text Goes Here</h2>
+        <p>Some more details or description about the images or the section.</p>
+    </div>
+</section>
+
 
   <!-- Footer -->
   <footer>
