about page fix 2

--- a/about.html
+++ b/about.html
@@ -40,9 +40,9 @@
 <!-- Image and Text Section -->
 <section class="image-text-section">
     <div class="image-container2">
-        <img src="images/image1.jpg" alt="Image 1" class="responsive-img2">
-        <img src="images/image2.jpg" alt="Image 2" class="responsive-img2">
-        <img src="images/image3.jpg" alt="Image 3" class="responsive-img2">
+        <img src="images/IMG_3025.jpg" alt="Image 1" class="responsive-img2">
+        <img src="images/IMG_3025.jpg" alt="Image 2" class="responsive-img2">
+        <img src="images/IMG_3025.jpg" alt="Image 3" class="responsive-img2">
     </div>
     <div class="text-container2">
         <h2>Text Goes Here</h2>
