about page fix 4

--- a/about.html
+++ b/about.html
@@ -37,21 +37,21 @@
     </div>
 </section>
 
-<!-- Image and Text Section -->
-<section class="image-text-section">
-    <div class="image-container2">
-        <img src="images/IMG_3025.jpg" alt="Image 1" class="responsive-img2">
-        <img src="images/IMG_3025.jpg" alt="Image 2" class="responsive-img2">
-        <img src="images/IMG_3025.jpg" alt="Image 3" class="responsive-img2">
-    </div>
-    <div class="text-container2">
-        <h2>Text Goes Here</h2>
-        <p>Some more details or description about the images or the section.</p>
-
-        <h2>Text Goes Here</h2>
-        <p>Some more details or description about the images or the section.</p>
+<!-- Image Section with 3 Images -->
+<section class="placeholder">
+    <div class="content-wrapper2">
+        <div class="image-container2">
+            <img src="images/IMG_3025.jpg" alt="Image 1" class="responsive-img">
+        </div>
+        <div class="image-container2">
+            <img src="images/IMG_3025.jpg" alt="Image 2" class="responsive-img">
+        </div>
+        <div class="image-container2">
+            <img src="images/IMG_3025.jpg" alt="Image 3" class="responsive-img">
+        </div>
     </div>
 </section>
+
 
 
   <!-- Footer -->
