--- a/about.html
+++ b/about.html
@@ -41,13 +41,13 @@
 <section class="placeholder">
     <div class="content-wrapper2">
         <div class="image-container2">
-            <img src="images/IMG_3025.jpg" alt="Image 1" class="responsive-img">
+            <img src="images/IMG_3025.jpg" alt="Image 1" class="responsive-img2">
         </div>
         <div class="image-container2">
-            <img src="images/IMG_3025.jpg" alt="Image 2" class="responsive-img">
+            <img src="images/IMG_3025.jpg" alt="Image 2" class="responsive-img2">
         </div>
         <div class="image-container2">
-            <img src="images/IMG_3025.jpg" alt="Image 3" class="responsive-img">
+            <img src="images/IMG_3025.jpg" alt="Image 3" class="responsive-img2">
         </div>
     </div>
 </section>
