about page fix 8

--- a/about.html
+++ b/about.html
@@ -38,21 +38,19 @@
 </section>
 
 <!-- Image Section with 3 Images -->
-<section class="placeholder">
-    <div class="content-wrapper2">
-        <div class="image-container2">
-            <img src="images/IMG_3025.jpg" alt="Image 1" class="responsive-img2">
-        </div>
-        <div class="image-container2">
-            <img src="images/IMG_3025.jpg" alt="Image 2" class="responsive-img2">
-        </div>
-        <div class="image-container2">
-            <img src="images/IMG_3025.jpg" alt="Image 3" class="responsive-img2">
-        </div>
+<div class="image123">
+    <div class="imgContainer">
+        <img src="images/IMG_3025.jpg" height="200" width="200"/>
     </div>
-</section>
+    <div class="imgContainer">
+        <img class="images/IMG_3025.jpg" src="/images/tv.gif"/ height="200" width="200"/>
+    </div>
+    <div class="imgContainer">
+         <img src="images/IMG_3025.jpg"/ height="200" width="200"/>
+    </div>
+</div>
 
-
+/* 2268 x 4032 */
 
   <!-- Footer -->
   <footer>
