about page fix 9

--- a/about.html
+++ b/about.html
@@ -40,15 +40,17 @@
 <!-- Image Section with 3 Images -->
 <div class="image123">
     <div class="imgContainer">
-        <img src="images/IMG_3025.jpg" height="378" width="672"/>
+        <img src="images/IMG_3025.jpg" height="672" width="378"/>
     </div>
     <div class="imgContainer">
-        <img class="images/IMG_3025.jpg" src="/images/tv.gif"/ height="378" width="672"/>
+        <img class="middle-img" src="images/IMG_3025.jpg"/ height="672" width="378"/>
     </div>
     <div class="imgContainer">
-         <img src="images/IMG_3025.jpg"/ height="378" width="672"/>
+         <img src="images/IMG_3025.jpg"/ height="672" width="378"/>
     </div>
 </div>
+
+
 
 /* 2268 x 4032 */
 
