about page fix 10

--- a/about.html
+++ b/about.html
@@ -38,18 +38,12 @@
 </section>
 
 <!-- Image Section with 3 Images -->
-<div class="image123">
-    <div class="imgContainer">
-        <img src="images/IMG_3025.jpg" height="672" width="378"/>
-    </div>
-    <div class="imgContainer">
-        <img class="middle-img" src="images/IMG_3025.jpg"/ height="672" width="378"/>
-    </div>
-    <div class="imgContainer">
-         <img src="images/IMG_3025.jpg"/ height="672" width="378"/>
-    </div>
-</div>
 
+<div>
+ <img src="images/IMG_3025.jpg" alt=""  /> 
+ <img src="images/IMG_3025.jpg" alt=""  />
+ <img src="images/IMG_3025.jpg" alt="" />
+</div>
 
 
 /* 2268 x 4032 */
