--- a/about.html
+++ b/about.html
@@ -40,9 +40,9 @@
 <!-- Image Section with 3 Images -->
 
 <div>
- <img src="images/IMG_3025.jpg" alt=""  /> 
- <img src="images/IMG_3025.jpg" alt=""  />
- <img src="images/IMG_3025.jpg" alt="" />
+ <img src="images/IMG_3025.jpg" alt="" height="672" width="378"  /> 
+ <img src="images/IMG_3025.jpg" alt="" height="672" width="378"  />
+ <img src="images/IMG_3025.jpg" alt="" height="672" width="378"  />
 </div>
 
 
