about page fix 13

--- a/about.html
+++ b/about.html
@@ -39,11 +39,12 @@
 
 <!-- Image Section with 3 Images -->
 
-<div>
- <img src="images/IMG_3025.jpg" alt="" height="672" width="378"  /> 
- <img src="images/IMG_3025.jpg" alt="" height="672" width="378"  />
- <img src="images/IMG_3025.jpg" alt="" height="672" width="378"  />
+<div class="image-container2">
+    <img src="images/IMG_3025.jpg" alt="" height="672" width="378" />
+    <img src="images/IMG_3025.jpg" alt="" height="672" width="378" />
+    <img src="images/IMG_3025.jpg" alt="" height="672" width="378" />
 </div>
+
 
 
 /* 2268 x 4032 */
