about page fix 14

--- a/about.html
+++ b/about.html
@@ -39,10 +39,13 @@
 
 <!-- Image Section with 3 Images -->
 
+
 <div class="image-container2">
-    <img src="images/IMG_3025.jpg" alt="" height="672" width="378" />
-    <img src="images/IMG_3025.jpg" alt="" height="672" width="378" />
-    <img src="images/IMG_3025.jpg" alt="" height="672" width="378" />
+  <div class="image-wrapper">
+      <img src="images/IMG_3025.jpg" alt="" height="672" width="378" />
+      <img src="images/IMG_3025.jpg" alt="" height="672" width="378" />
+      <img src="images/IMG_3025.jpg" alt="" height="672" width="378" />
+  </div>
 </div>
 
 
