about page fix 15

--- a/about.html
+++ b/about.html
@@ -39,18 +39,66 @@
 
 <!-- Image Section with 3 Images -->
 
-
 <div class="image-container2">
-  <div class="image-wrapper">
-      <img src="images/IMG_3025.jpg" alt="" height="672" width="378" />
-      <img src="images/IMG_3025.jpg" alt="" height="672" width="378" />
-      <img src="images/IMG_3025.jpg" alt="" height="672" width="378" />
-  </div>
+    <img src="images/IMG_3025.jpg" alt="" height="672" width="378" />
+    <img src="images/IMG_3025.jpg" alt="" height="672" width="378" />
+    <img src="images/IMG_3025.jpg" alt="" height="672" width="378" />
 </div>
 
 
-
 /* 2268 x 4032 */
+
+<!-- Getting Here Section -->
+<section class="placeholder">
+  <div class="text-container">
+    <h2>Getting Here</h2>
+    <p>_________________________________</p>
+    <q> gap </q>
+    <p>blabla</p>
+    <p>_________________________________</p>
+  </div>
+</section>
+
+<!-- Map Section -->
+   <!-- script type="module" src="./index.js"></script>-->
+   <gmp-map
+   center="45.576338,10.7933712"
+   zoom="7"
+   map-id="DEMO_MAP_ID"
+   style="height: 400px"
+ >
+   <gmp-advanced-marker
+     position="45.576338,10.7933712"
+     title="Corte Pozzol"
+   ></gmp-advanced-marker>
+
+ </gmp-map>
+
+ <!-- 
+   The `defer` attribute causes the script to execute after the full HTML
+   document has been parsed. For non-blocking uses, avoiding race conditions,
+   and consistent behavior across browsers, consider loading using Promises. See
+   https://developers.google.com/maps/documentation/javascript/load-maps-js-api
+   for more information.
+   -->
+ <script
+   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBl4Q0Wpnj7bAAll82cWm8nlKJFoG4v9sU&libraries=maps,marker&v=beta"
+   defer
+ ></script>
+
+
+<!-- Testimonials Section -->
+<section class="testimonials">
+  <div class="text-container">
+    <h2>Getting Here</h2>
+    <p>_________________________________</p>
+    <q> gap </q>
+    <p>blabla</p>
+    <p>_________________________________</p>
+  </div>
+</section>
+
+
 
   <!-- Footer -->
   <footer>
