about page fix 16

--- a/about.html
+++ b/about.html
@@ -38,24 +38,22 @@
 </section>
 
 <!-- Image Section with 3 Images -->
-
-<div class="image-container2">
-    <img src="images/IMG_3025.jpg" alt="" height="672" width="378" />
-    <img src="images/IMG_3025.jpg" alt="" height="672" width="378" />
-    <img src="images/IMG_3025.jpg" alt="" height="672" width="378" />
+<div class="testimonials">
+  <p> bla bla </p>
+  <div class="image-container2">
+      <img src="images/IMG_3025.jpg" alt="" height="384" width="216" />
+      <img src="images/IMG_3025.jpg" alt="" height="384" width="216" />
+      <img src="images/IMG_3025.jpg" alt="" height="384" width="216" />
+  </div>
+  <p> bla bla </p>
 </div>
-
-
-/* 2268 x 4032 */
 
 <!-- Getting Here Section -->
 <section class="placeholder">
   <div class="text-container">
     <h2>Getting Here</h2>
-    <p>_________________________________</p>
     <q> gap </q>
     <p>blabla</p>
-    <p>_________________________________</p>
   </div>
 </section>
 
@@ -90,11 +88,13 @@
 <!-- Testimonials Section -->
 <section class="testimonials">
   <div class="text-container">
-    <h2>Getting Here</h2>
-    <p>_________________________________</p>
-    <q> gap </q>
-    <p>blabla</p>
-    <p>_________________________________</p>
+    <h2>Testimonials</h2>
+    <q2> gap </q2>
+    <div class="quotes-container">
+      <q class="quote">"Quote 1, bla bla blaaaa blaaa bla blaaa bla bla i bla i bla i blaa"</q>
+      <q class="quote">"Quote 2, bla bla bla bla bla bla blllaaaa bla bla bla blaaa bla bla bla"</q>
+      <q class="quote">"Quote 3, test test test test testimonial testing test"</q>
+    </div>
   </div>
 </section>
 
