about page fix 17

--- a/about.html
+++ b/about.html
@@ -98,6 +98,20 @@
   </div>
 </section>
 
+<!-- Button Section -->
+
+<section class="placeholder">
+
+  <a href="contact.html" id="booking-button"
+              style="display: block; width: fit-content; margin: 15px auto 25px auto; padding: 20px 60px;
+                    background-color: #8c1313; color: white; text-decoration: none;
+                    font-weight: normal; font-size: large; border-radius: 15px; font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
+                    transition: background-color 0.3s ease;">
+              Book Now
+          </a>
+
+</section>
+
 
 
   <!-- Footer -->
